feature of view balance added today. Also added a feature in main menu, it will ask user to continue or just exit.