@@ -10,7 +10,7 @@ import java.util.stream.Collectors;
 public class UserRepository {
     //Multiple user so -> collection is used mainly Arraylist(Duplicate) or Set(No duplication).
     //We don't want to use the duplicate value for authenticity.
-    private static Set<User> users = new HashSet<>();      //this is going to be a set which is going to store all the user data. It is going to be common that is why we need only one copy of this for efficiency soo we are making it static.
+    private static final Set<User> users = new HashSet<>();      //this is going to be a set which is going to store all the user data. It is going to be common that is why we need only one copy of this for efficiency soo we are making it static.
 
     // to initialize these users static member, we need a static block.
     // as we log in in we need one data already to operate that is here admin
@@ -20,7 +20,8 @@ public class UserRepository {
         User user3 = new User("user3", "1424255", "user3", "user", 6500.0);
         User user4 = new User("user3", "1424755", "user4", "user", 6500.0);
 
-        //the set is considering the user3 and user4 as completely different that is why it was printing the same value agian and again. in order to solve that we need to use the .equals to compare the parameters which helps the differentiate the two objects.
+        //the set is considering the user3 and user4 as completely different that is why it was printing the same value again and again.
+        // in order to solve that we need to use the .equals to compare the parameters which helps to differentiate the two objects.
 
         users.add(user1);
         users.add(user2);
@@ -35,9 +36,9 @@ public class UserRepository {
     public User login(String username, String password) {
         List<User> finalList = users.stream()
                 .filter(user -> user.getUsername().equals(username) && user.getPassword().equals(password))
-                .collect(Collectors.toList());
+                .toList();
         if (!finalList.isEmpty()) {
-            return finalList.get(0);
+            return finalList.getFirst();
         } else {
             return null;
         }
@@ -46,5 +47,14 @@ public class UserRepository {
     public boolean createUser(String username, String password, String contact) {
         User user = new User(username, contact, password, "user", 500.0);
         return  users.add(user);
+    }
+    public  Double checkBankBalance(String userId){
+        List<User> result=users.stream().filter(user -> user.getUsername().equals(userId)).collect(Collectors.toList());
+        if(!result.isEmpty()){
+            return result.get(0).getAccountBalance();
+        }
+        else{
+            return null;
+        }
     }
 }
